@@ -1,5 +1,8 @@
 2011-05-31  Andreas Kupries  <andreask@activestate.com>
 
+	* New module and package: oo::util. Right now only easy
+	  referencing of instance methods for callbacks.
+
 	* New module and package: lambda. Easy anonymous procedures for
 	  Tcl 8.5+.
 
